Closed Bug 1166575 Opened 10 years ago Closed 10 years ago

uninitialized variable error in dom/bluetooth/bluedroid/BluetoothHALInterface.cpp when building a debug B2G build

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox41 fixed)

RESOLVED FIXED
Tracking Status
firefox41 --- fixed

People

(Reporter: heycam, Assigned: heycam)

Details

Attachments

(1 file)

I'm running into a build error when trying to produce a debug B2G build. Warnings-as-errors is turned on for dom/bluetooth/bluedroid/ and I end up with an error complaining about |name| in BluetoothHALInterface::GetRemoteDeviceProperty being undefined before being passed into get_remote_device_property. This is with gcc 4.7. I guess we should either just initialize it with a dummy value, or not actually compile that branch of the if statement since it's |&& false| anyway.
Attached patch patchSplinter Review
Assignee: nobody → cam
Status: NEW → ASSIGNED
Attachment #8607873 - Flags: review?(tzimmermann)
Comment on attachment 8607873 [details] [diff] [review] patch Review of attachment 8607873 [details] [diff] [review]: ----------------------------------------------------------------- This code is mostly a placeholder and obviously unused. It's supposed to be removed during the next months. Anyway, thanks a lot for cleaning up! ::: dom/bluetooth/bluedroid/BluetoothHALInterface.cpp @@ +640,4 @@ > > if (NS_SUCCEEDED(Convert(aRemoteAddr, remoteAddr)) && > false /* TODO: we don't support any values for aName currently */) { > + name = (bt_property_type_t) 0; // to silence uninitialized variable warning Please use C++'s static_cast<bt_property_type_t>.
Attachment #8607873 - Flags: review?(tzimmermann) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: