Bug 1166575 - Silence uninitialized variable error in BluetoothHALInterface.cpp when building a debug B2G build. r=tzimmermann